fixed: Se elimino la id de el div dentro del header  en el html y por ende se modifico el css

--- a/Entregables-Modulo2/IntroduccionACSS-Entregable/index.html
+++ b/Entregables-Modulo2/IntroduccionACSS-Entregable/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div id="container-in-header">
+        <div>
             <img id="logo" src="imagenes/libro-de-cocina.png" alt="">
             <button class="btn-header">Iniciar sesión</button>
             <button class="btn-header">Registrarse</button>
